# smolagents-local

./: CLAUDE.md  Dockerfile.phoenix  IMPLEMENTATION_FIXES.md  README.md  REMAINING_FIXES.md  SETUP_GUIDE.md  docker-compose.yml  dockerfile  gate_improvement.md  import_fix_analysis.md  new_agent_plan.md  new_agent_plan_fixed.md  ollama_phoenix_multiagent_hybrid.py  ollama_phoenix_multiagent_patch.py  ollama_phoenix_plan_hybrid.py  ollama_sandbox_phoenix_plan_test.py  ollama_sandbox_test.py  opencode.json  patch_agent_example.py  patch_tools.py  requirements.txt  review_agent.md  sandbox_manager.py  smolagents_memory_analysis.md
agent_runtime/: orchestrator.py  tool_registry.py
approval_patches/: APPROVAL_WORKFLOW_GUIDE.md  PATCHING_ARCHITECTURE_V3.md  PATCHING_IMPLEMENTATION_SUMMARY.md  PATCHING_README.md  approval_helper.py  approval_ui.py  approval_workflow.py  artifact_store.py  artifacts.db  code_patching_agent.py  fix_orphaned_artifacts.py  patch_applier.py  (+5 more)
smol_instruments/: .env.example  .gitignore  README.md  path_a_only_implementation.md  pyproject.toml
smol_instruments/agent_runtime/: __init__.py  approval.py  config.py  instrumentation.py  orchestrator.py  policy.py  prompt.py  run.py  sandbox.py  state.py
smol_instruments/agent_runtime/tools/: __init__.py  files.py  git.py  patch.py  repo.py  search.py  shell.py  validation.py
smol_instruments/tests/: __init__.py  test_approval.py  test_gate_integration.py  test_instrumentation.py  test_integration.py  test_logging_verification.py  test_policy.py  test_state.py  test_tools.py  test_validation.py
(+20 files in other folders)
